--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,11 @@
     <string name="update_channel_nightly">Nightly build</string>
     <string name="pref_title_restrict_classloader">Only module classloader can use Xposed API</string>
     <string name="pref_summary_restrict_classloader">This may break some modules but benefit security (experimental feature)</string>
+    <string name="settings_group_cli">CLI</string>
+    <string name="pref_title_enable_cli">Enable CLI</string>
+    <string name="pref_summary_enable_cli">(experimental feature)</string>
+    <string name="timeout_session">Session timeout in minutes</string>
+    <string name="one_command">One command</string>
 
     <!-- Module Repo -->
     <string name="module_readme">Readme</string>
