[cli] session timeout can be disabled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,6 +193,7 @@
     <string name="pref_summary_enable_cli">(experimental feature)</string>
     <string name="timeout_session">Session timeout in minutes</string>
     <string name="one_command">One command</string>
+    <string name="disabled">Disabled</string>
 
     <!-- Module Repo -->
     <string name="module_readme">Readme</string>
